--- a/index.html
+++ b/index.html
@@ -252,29 +252,29 @@
                 <!-- Project 1 -->
                 <div class="project-card group" data-category="react">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
-                        <img src="https://readdy.ai/api/search-image?query=modern%20e-commerce%20website%20interface%20with%20clean%20design%2C%20product%20grid%20layout%2C%20shopping%20cart%20functionality%2C%20responsive%20design%20elements%2C%20professional%20UI%2FUX%20design%20with%20blue%20accent%20colors%2C%20high-quality%20product%20photography%20against%20white%20background&width=600&height=400&seq=project1&orientation=landscape"
+                        <img src="./images/IMG_20250418_221208.jpg"
                             alt="E-commerce Platform"
                             class="w-full h-64 object-cover object-top transition duration-300" />
                         <div
                             class="project-overlay absolute inset-0 bg-gradient-to-t from-black/80 to-black/30 opacity-0 transition duration-300 flex flex-col justify-end p-6">
                             <div class="transform translate-y-4 transition duration-300 group-hover:translate-y-0">
                                 <h3 class="text-white text-xl font-semibold mb-2">
-                                    E-commerce Platform
+                                    Static website
                                 </h3>
                                 <p class="text-gray-200 text-sm mb-4">
-                                    A modern e-commerce platform with cart functionality and
-                                    payment integration.
+                                    A static website for a homestay.
                                 </p>
                                 <div class="flex flex-wrap gap-2 mb-4">
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">React</span>
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Redux</span>
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Stripe</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">HTML</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">CSS</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">JS</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Tailwind</span>
                                 </div>
                                 <div class="flex space-x-3">
-                                    <a href="#"
+                                    <a href="https://idamhomestays.com"
                                         class="text-white bg-primary/90 hover:bg-primary px-3 py-1 rounded text-sm !rounded-button whitespace-nowrap transition">Live
                                         Demo</a>
-                                    <a href="#"
+                                    <a href="https://github.com/nishandms/idam-homestay"
                                         class="text-white bg-gray-700/90 hover:bg-gray-700 px-3 py-1 rounded text-sm !rounded-button whitespace-nowrap transition">GitHub</a>
                                 </div>
                             </div>
