background changes in the header section.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="pt-28 pb-20 bg-white"
-        style="background-image: url('/images/bg.jpg'); background-size: cover; background-position: center;">
+        style="background-image: url('/images/bg.jpg'); background-size: cover; background-position: center;background-color:#f9fafb;">
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0">
@@ -116,9 +116,6 @@
                     <img src="images/nishandms.jpg"
                         alt="Nishand M S"
                         class="w-64 h-64 object-cover rounded-full border-4 border-white shadow-lg" />
-                    <!-- <img src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20young%20male%20developer%20with%20short%20dark%20hair%2C%20wearing%20a%20casual%20professional%20outfit%2C%20warm%20friendly%20smile%2C%20high%20quality%20portrait%20photo%20with%20soft%20lighting%20against%20a%20neutral%20background%2C%20professional%20look&width=400&height=400&seq=profile1&orientation=squarish"
-                        alt="John Anderson"
-                        class="w-64 h-64 object-cover rounded-full border-4 border-white shadow-lg" /> -->
                 </div>
             </div>
         </div>
@@ -134,8 +131,6 @@
                 <div class="md:w-2/5">
                     <img src="images/pc.jpg"
                         alt="Nishand Working" class="w-full h-auto rounded-lg shadow-lg object-cover" />
-                    <!-- <img src="https://readdy.ai/api/search-image?query=professional%20young%20man%20working%20on%20laptop%20in%20modern%20office%20space%2C%20focused%20on%20coding%2C%20surrounded%20by%20modern%20tech%20environment%2C%20casual%20professional%20attire%2C%20side%20view%20showing%20concentration%20and%20professionalism&width=600&height=800&seq=about1&orientation=portrait"
-                        alt="John working" class="w-full h-auto rounded-lg shadow-lg object-cover" /> -->
                 </div>
                 <div class="md:w-3/5">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">
@@ -252,14 +247,14 @@
                 <!-- Project 1 -->
                 <div class="project-card group" data-category="react">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
-                        <img src="./images/IMG_20250418_221208.jpg"
+                        <img src="./images/idam-homestay.jpg"
                             alt="E-commerce Platform"
                             class="w-full h-64 object-cover object-top transition duration-300" />
                         <div
                             class="project-overlay absolute inset-0 bg-gradient-to-t from-black/80 to-black/30 opacity-0 transition duration-300 flex flex-col justify-end p-6">
                             <div class="transform translate-y-4 transition duration-300 group-hover:translate-y-0">
                                 <h3 class="text-white text-xl font-semibold mb-2">
-                                    Static website
+                                    IDAM Homestays
                                 </h3>
                                 <p class="text-gray-200 text-sm mb-4">
                                     A static website for a homestay.
