bug fixes in micro interactions.

--- a/index.html
+++ b/index.html
@@ -139,14 +139,13 @@
             <h2 class="text-3xl font-bold text-center text-gray-900 mb-16">
                 About Me
             </h2>
-            <div class="flex flex-col md:flex-row items-center gap-12">
-                <div data-aos="fade-up" data-aos-duration="800"
-                data-aos-anchor-placement="center-bottom" class="md:w-2/5">
+            <div class="flex flex-col md:flex-row items-center gap-12" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
+                <div  class="md:w-2/5">
                     <img src="images/pc.jpg" alt="Nishand Working"
                         class="w-full h-auto rounded-lg shadow-lg object-cover" />
                 </div>
-                <div data-aos="fade-up" data-aos-duration="800"
-                data-aos-anchor-placement="center-bottom" class="md:w-3/5">
+                <div 
+                 class="md:w-3/5">
                     <h3 class="text-2xl font-semibold text-gray-800 mb-4">
                         Frontend UI Developer with 5+ Years Experience
                     </h3>
