micro interaction fixes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h2 class="text-3xl font-bold text-center text-gray-900 mb-16">
                 About Me
             </h2>
-            <div class="flex flex-col md:flex-row items-center gap-12" data-aos="fade-up" data-aos-duration="500" data-aos-anchor-placement="center-bottom">
+            <div class="flex flex-col md:flex-row items-center gap-12" data-aos="fade-up" data-aos-duration="800">
                 <div  class="md:w-2/5">
                     <img src="images/pc.jpg" alt="Nishand Working"
                         class="w-full h-auto rounded-lg shadow-lg object-cover" />
@@ -250,9 +250,9 @@
             </div>
 
             <!-- Projects Grid -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" >
                 <!-- Project 1 -->
-                <div class="project-card group" data-category="react">
+                <div class="project-card group" data-category="react" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="./images/projects/idam-homestay.jpg" alt="E-commerce Platform"
                             class="w-full h-64 object-cover object-top transition duration-300" />
@@ -284,7 +284,7 @@
                 </div>
 
                 <!-- Project 2 -->
-                <div class="project-card group" data-category="vue">
+                <div class="project-card group" data-category="vue" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="https://readdy.ai/api/search-image?query=dashboard%20UI%20with%20data%20visualization%2C%20analytics%20charts%2C%20user%20statistics%2C%20modern%20admin%20panel%20interface%2C%20dark%20mode%20design%20with%20blue%20accent%20colors%2C%20clean%20and%20professional%20layout%20with%20graphs%20and%20metrics%20displays&width=600&height=400&seq=project2&orientation=landscape"
                             alt="Analytics Dashboard"
@@ -317,7 +317,7 @@
                 </div>
 
                 <!-- Project 3 -->
-                <div class="project-card group" data-category="javascript">
+                <div class="project-card group" data-category="javascript" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="https://readdy.ai/api/search-image?query=task%20management%20application%20interface%20with%20kanban%20board%20layout%2C%20task%20cards%2C%20drag%20and%20drop%20functionality%2C%20progress%20tracking%2C%20clean%20and%20minimal%20design%20with%20blue%20accent%20colors%2C%20professional%20project%20management%20UI&width=600&height=400&seq=project3&orientation=landscape"
                             alt="Task Management App"
@@ -351,7 +351,7 @@
                 </div>
 
                 <!-- Project 4 -->
-                <div class="project-card group" data-category="react">
+                <div class="project-card group" data-category="react" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="https://readdy.ai/api/search-image?query=fitness%20application%20interface%20with%20workout%20tracking%2C%20progress%20charts%2C%20exercise%20library%2C%20modern%20mobile%20app%20UI%20design%2C%20clean%20interface%20with%20blue%20accent%20colors%2C%20health%20and%20fitness%20tracking%20dashboard&width=600&height=400&seq=project4&orientation=landscape"
                             alt="Fitness Tracker" class="w-full h-64 object-cover object-top transition duration-300" />
@@ -384,7 +384,7 @@
                 </div>
 
                 <!-- Project 5 -->
-                <div class="project-card group" data-category="vue">
+                <div class="project-card group" data-category="vue" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="https://readdy.ai/api/search-image?query=real%20estate%20property%20listing%20website%20interface%20with%20property%20cards%2C%20search%20filters%2C%20map%20integration%2C%20modern%20web%20design%20with%20property%20images%2C%20clean%20and%20professional%20UI%20with%20blue%20accent%20colors&width=600&height=400&seq=project5&orientation=landscape"
                             alt="Real Estate Platform"
@@ -418,7 +418,7 @@
                 </div>
 
                 <!-- Project 6 -->
-                <div class="project-card group" data-category="javascript">
+                <div class="project-card group" data-category="javascript" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
                         <img src="https://readdy.ai/api/search-image?query=weather%20application%20interface%20with%20forecast%20display%2C%20location%20search%2C%20temperature%20graphs%2C%20modern%20weather%20app%20UI%20with%20clean%20design%2C%20blue%20sky%20background%2C%20professional%20weather%20dashboard%20with%20icons&width=600&height=400&seq=project6&orientation=landscape"
                             alt="Weather App" class="w-full h-64 object-cover object-top transition duration-300" />
