fixing favicon issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description"
         content="Nishand M S is a Frontend UI Developer crafting beautiful, responsive, and user-friendly web experiences using Angular, JavaScript, TypeScript, Tailwind CSS, and Node.js.">
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Nishand M S - Frontend Developer</title>
     <script src="./libs/js/tailwind.min.js"></script>
     <script>
