--- a/index.html
+++ b/index.html
@@ -286,29 +286,30 @@
                 <!-- Project 2 -->
                 <div class="project-card group" data-category="vue" data-aos="fade-up" data-aos-duration="800">
                     <div class="relative overflow-hidden rounded-lg shadow-md">
-                        <img src="https://readdy.ai/api/search-image?query=dashboard%20UI%20with%20data%20visualization%2C%20analytics%20charts%2C%20user%20statistics%2C%20modern%20admin%20panel%20interface%2C%20dark%20mode%20design%20with%20blue%20accent%20colors%2C%20clean%20and%20professional%20layout%20with%20graphs%20and%20metrics%20displays&width=600&height=400&seq=project2&orientation=landscape"
+                        <img src="./images/projects/talksy.png"
                             alt="Analytics Dashboard"
                             class="w-full h-64 object-cover object-top transition duration-300" />
                         <div
                             class="project-overlay absolute inset-0 bg-gradient-to-t from-black/80 to-black/30 opacity-0 transition duration-300 flex flex-col justify-end p-6">
                             <div class="transform translate-y-4 transition duration-300 group-hover:translate-y-0">
                                 <h3 class="text-white text-xl font-semibold mb-2">
-                                    Analytics Dashboard
+                                    Talksy - Chat Application
                                 </h3>
                                 <p class="text-gray-200 text-sm mb-4">
                                     Interactive dashboard with real-time data visualization and
                                     filtering.
                                 </p>
                                 <div class="flex flex-wrap gap-2 mb-4">
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Vue.js</span>
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">D3.js</span>
-                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Firebase</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Node.js</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Express</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">MongoDB</span>
+                                    <span class="px-2 py-1 bg-blue-500/20 text-blue-100 rounded text-xs">Handlebars (HBS)</span>
                                 </div>
                                 <div class="flex space-x-3">
-                                    <a href="#"
+                                    <a href="https://talksy-wwle.onrender.com/"
                                         class="text-white bg-primary/90 hover:bg-primary px-3 py-1 rounded text-sm !rounded-button whitespace-nowrap transition">Live
                                         Demo</a>
-                                    <a href="#"
+                                    <a href="https://github.com/nishandms/Talksy-chatapp"
                                         class="text-white bg-gray-700/90 hover:bg-gray-700 px-3 py-1 rounded text-sm !rounded-button whitespace-nowrap transition">GitHub</a>
                                 </div>
                             </div>
