--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <a href="#skills" class="text-gray-600 hover:text-primary font-medium transition">Skills</a>
                 <a href="#contact" class="text-gray-600 hover:text-primary font-medium transition">Contact</a>
             </nav>
+            <div class="md:hidden w-10 h-10 flex items-center justify-center">
+                <i class="ri-menu-line ri-lg text-gray-700"></i>
+            </div>
         </div>
         <!-- Mobile Navigation -->
         <div id="mobileMenu" class="hidden md:hidden bg-white px-6 py-4 shadow-md">
